--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>Chào mừng đến với Website Mẫu</h1>
     </header>
     <nav>
-        <a href="#">Trang chủ</a>
+        <a href="index1.html">Trang chủ</a>
         <a href="#">Giới thiệu</a>
         <a href="#">Dịch vụ</a>
         <a href="#">Liên hệ</a>
