--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./CT188-N07-main/html/main.html"></a>
+    <a href="./CT188-N07-main/html/main.html">Trang chủ</a>
 </body>
 </html>
